# CCourseFAKI2015

./: .gitignore  Test  batch_commands.txt  delete_aux_files.bat
final_tasks_1term/aabb_tree/: Video Game Physics Tutorial Part II_ Collision Detection _ Toptal.html  task.txt
final_tasks_1term/decision_tree/: decision_tree.c  task.txt
final_tasks_1term/numerical_integration/: task.txt  Учебное пособие по Математическим методам в географии..html  Численные методы.html
final_tasks_1term/read_file_basketball/: players.txt  read_file.c  task.txt
info/: seminar10_presentation.tex  seminar10_presentation.vrb
module3_oop/questions/: module3_questions.tex
module4_utils/seminar7_testing/: CMakeLists.txt
other/pthreads/: classroom_tasks_pthreads.blg  classroom_tasks_pthreads.tex
seminar1/: seminar1_presentation.aux  seminar1_presentation.nav  seminar1_presentation.tex  seminar1_presentation.toc
seminar1/programms/: a.out  area_triangle.c  integers.c  variable_scope.c
seminar10/: seminar10_presentation.nav  seminar10_presentation.tex
seminar12/: seminar12_presentation.nav
seminar2/: seminar2_presentation.tex
seminar2/programms/: code_loop_remarks.c  variable_scope.c
seminar5/: seminar5_presentation.aux  seminar5_presentation.nav  seminar5_presentation.tex
seminar5/other/: sorting.html
seminar5/other2/: VisuAlgo - Sorting (Bubble, Selection, Insertion, Merge, Quick, Counting, Radix).html
seminar6/: seminar6_presentation.toc  seminar6_presentation.vrb
seminar7/programm/: Aif12.c  knight.c  midterm_func-delta.c
seminar9/: seminar9_presentation.tex  seminar9_presentation.vrb
term1/all_presentations/: seminar10_presentation.tex  seminar12_presentation.tex
term1/data/: exoplanets.csv
term1/presentation1/: cs_mipt_presentation_part1.aux  cs_mipt_presentation_part1.nav  cs_mipt_presentation_part1.out  cs_mipt_presentation_part1.tex  cs_mipt_presentation_part1.toc  cs_mipt_presentation_part1.vrb  seminar1_presentation.tex  seminar3_presentation.tex  seminar5_presentation.tex
term1/presentations/: seminar7_presentation.tex  seminar9_presentation.tex
term1/questions/: questions.tex
term1/seminar00_intro/: intro.fdb_latexmk  intro.fls  intro.tex
term1/seminar01_basics/: classroom_tasks_basics_backup.tex  homework_basics.tex  seminar2_presentation.tex
term1/seminar01_intfloat/: seminar1_presentation.aux  seminar1_presentation.nav  seminar1_presentation.out  seminar1_presentation.tex  seminar1_presentation.toc  seminar1_presentation.vrb
term1/seminar02_iffor/: seminar2_presentation.aux  seminar2_presentation.nav  seminar2_presentation.out  seminar2_presentation.tex  seminar2_presentation.toc  seminar2_presentation.vrb
term1/seminar03_arrays/: seminar3_presentation.aux  seminar3_presentation.out  seminar3_presentation.vrb
term1/seminar03_func/: seminar3_presentation.aux  seminar3_presentation.nav  seminar3_presentation.out  seminar3_presentation.tex  seminar3_presentation.toc  seminar3_presentation.vrb
term1/seminar04_array/: seminar4_presentation.aux  seminar4_presentation.nav  seminar4_presentation.out  seminar4_presentation.tex  seminar4_presentation.toc  seminar4_presentation.vrb
term1/seminar10_list/: list.c  (+5 more)
term2/: seminar12_inheritance - Ярлык.lnk
term2/seminar04_libraries/classroom_tasks/2sfml/4cmake/: CMakeLists.txt  main.cpp
term2/seminar05_libraries/classroom_tasks/2sfml/5cmake_find_package/: CMakeLists.txt
term2/seminar06_inheritance/imgui_example/: CMakeLists.txt
term2/seminar07_make/: CMakeLists.txt  sfml-app
term2/seminar07_make/tasks/: tasks.tex
term2/seminar07_make/tasks/separate_compilation/: main.cpp
term2/seminar10_fsm/homework/: CMakeLists.txt
term2/seminar10_fsm/homework/src/: player.h  player_states.cpp  world.h
(+2309 files in other folders)
